@@ -1,3 +1,7 @@
+2001-12-05  Bruno Haible  <bruno@clisp.org>
+
+	* localcharset.c (locale_charset): Don't return an empty string.
+
 2001-10-23  Bruno Haible  <haible@clisp.cons.org>
 
 	* config.charset: msdos in uk_UA uses CP1125.
